--- a/chairman-speech.html
+++ b/chairman-speech.html
@@ -25,7 +25,7 @@
                   <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
                     <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
@@ -76,10 +76,13 @@
             <!-- Main Section Content -->
             <div class="col-md-8 col-12">
 
-                <div class="blog my-4">
+                <div class="blog speech my-4">
                     <h3 class="text-center mb-3 py-2">Chairman's Massage</h3>
                 
                     <div class="text-center">
+
+                        <img src="assets/img/chairman.jpg" class="w-25 mb-3" alt="">
+
                         <p>From 1971 Bangladesh is facing many challenges including social, environment and economical aspect. It's education, health, live hood women empowerment and socio-economic sector is steel vulnerable. Polliprottasha continues to staff are very careful about their respective responsibilities to fill up organizational objectives.</p>
 
                         <p><b>Polliprottasha</b> is a socio-economic organization founded in 2003 to raise social  awareness, em-power of women and poverty reduction through effective tools and programs.</p>
