--- a/executive-director.html
+++ b/executive-director.html
@@ -25,7 +25,7 @@
                   <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
                     <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
                       <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
                       </li>
                       <li class="nav-item bg-danger me-1 px-3">
                         <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
@@ -76,10 +76,12 @@
             <!-- Main Section Content -->
             <div class="col-md-8 col-12">
 
-                <div class="blog my-4">
+                <div class="blog speech my-4">
                     <h3 class="text-center mb-3 py-2">Executive Director</h3>
                 
                     <div class="text-center">
+                      <img src="assets/img/director.jpg" class="w-25 mb-3" alt="">
+
                         <p>Sheikh Faruque ahammad has been working in development field over fifteen years tenures . He gained an ample experience in diverse development paradigms; like Microfinance (MF) management, result based program management (RBM), Project life cycle management (PCM) and value chain Project facilitation (VCF) approach.</p>
 
                         <p>He has been developed number of project proposals in accordance with theory of  Change (TOC) and logical frame work (Log Frame) Identification , design, Planning, implementation, capacities building, HR management, monitoring and control is the another of his expertise.</p>
