--- a/index.html
+++ b/index.html
@@ -53,56 +53,58 @@
               </div>
         </div>
 
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light main-manu" id="navbar">
-                <div class="container-fluid">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse home-nav-list" id="navbarSupportedContent">
-                    <ul class="navbar-nav text-uppercase mx-auto mb-2 mb-lg-0 d-flex">
-                      <li class="nav-item bg-danger me-1 px-3 active">
-                        <a class="nav-link text-light" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          About
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Management
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> what we do</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> legal status</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="careers.html"><i class="fa fa-briefcase" aria-hidden="true"></i> career</a>
-                      </li>
-                      
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="gallaries.html"><i class="fa fa-address-book" aria-hidden="true"></i> gallery</a>
-                      </li>
-                      <li class="nav-item bg-danger me-1 px-3">
-                        <a class="nav-link text-light" href="contact.html"><i class="fa fa-map-marker-alt" aria-hidden="true"></i> contact us</a>
-                      </li>
+
+        <!-- <div class="container-fluid"> -->
+          <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3" id="navbar">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse text-uppercase" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarAboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      about
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
+                      <li><a class="dropdown-item" href="branches.html">history</a></li>
+                      <li><a class="dropdown-item" href="#">mission</a></li>
+                      <li><a class="dropdown-item" href="#">vision</a></li>
                     </ul>
-                  </div>
-                </div>
-              </nav>
-        </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarManagementDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      management
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarManagementDropdown">
+                      <li><a class="dropdown-item" href="#">item one</a></li>
+                      <li><a class="dropdown-item" href="#">item two</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">what we do</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">legal status</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="careers.html">career</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="gallaries.html">gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contact us</a>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
+          </nav>
+        <!-- </div> -->
     </header>
     <!-- End Header Section -->
 
