--- a/career-details.html
+++ b/career-details.html
@@ -35,7 +35,7 @@
                     about
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
-                    <li><a class="dropdown-item" href="branches.html">history</a></li>
+                    <li><a class="dropdown-item" href="#">history</a></li>
                     <li><a class="dropdown-item" href="#">mission</a></li>
                     <li><a class="dropdown-item" href="#">vision</a></li>
                   </ul>
@@ -162,7 +162,7 @@
           </div>
 
           <div class="col-md-3 col-6 morelinks">
-            <h5 class="mb-4">More Links</h5>
+            <!-- <h5 class="mb-4">More Links</h5>
             <ul>
               <li><a href="">Organogram</a></li>
               <li><a href="">Organogram</a></li>
@@ -170,12 +170,12 @@
               <li><a href="">Organogram</a></li>
               <li><a href="">Organogram</a></li>
               <li><a href="">Organogram</a></li>
-            </ul>
+            </ul> -->
         </div>
 
         <div class="col-md-4 col-12">
           <h5 class="mb-4">Facebook Page</h5>
-          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fপল্লী-প্রত্যাশা-106315105313155%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
       </div>
 
