--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,7 @@
                       about
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
-                      <li><a class="dropdown-item" href="branches.html">history</a></li>
+                      <li><a class="dropdown-item" href="#">history</a></li>
                       <li><a class="dropdown-item" href="#">mission</a></li>
                       <li><a class="dropdown-item" href="#">vision</a></li>
                     </ul>
@@ -185,7 +185,7 @@
 
         <div class="col-md-4 col-12">
           <h5 class="mb-4">Facebook Page</h5>
-          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FKrishokerHashii%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+          <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fপল্লী-প্রত্যাশা-106315105313155%2F&tabs=timeline&height=150&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" width="100%" height="150" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </div>
       </div>
 
