--- a/gallaries.html
+++ b/gallaries.html
@@ -37,9 +37,9 @@
                       about
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarAboutDropdown">
-                      <li><a class="dropdown-item" href="#">history</a></li>
-                      <li><a class="dropdown-item" href="#">mission</a></li>
-                      <li><a class="dropdown-item" href="#">vision</a></li>
+                      <li><a class="dropdown-item" href="history.html">history</a></li>
+                      <li><a class="dropdown-item" href="mission.html">mission</a></li>
+                      <li><a class="dropdown-item" href="vision.html">vision</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
