--- a/careers.html
+++ b/careers.html
@@ -45,18 +45,17 @@
                       management
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarManagementDropdown">
-                      <li><a class="dropdown-item" href="#">item one</a></li>
-                      <li><a class="dropdown-item" href="#">item two</a></li>
+                      <li><a class="dropdown-item" href="organogram.html">Organugram</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">what we do</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">legal status</a>
+                    <a class="nav-link" href="legal-status.html">legal status</a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="careers.html">career</a>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="careers.html">career</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="gallaries.html">gallery</a>
@@ -79,22 +78,18 @@
         <div class="row">
             <!-- Main Section Left Sidebar -->
             <div class="col-md-2 col-12 home-main-leftbar">
-                <div class="mb-4">
-                    <ul>
-                        <li class="ps-1 py-1">Gramaus at a Glance</li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                    </ul>
-                </div>
+              <div class="mb-4">
+                  <ul>
+                      <li class="ps-1 py-1">Welcome to PolliProttasha</li>
+                  </ul>
+              </div>
 
-                <div class="mb-4">
-                    <ul>
-                        <li class="ps-1 py-1">Gramaus at a Glance</li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                    </ul>
-                </div>
-            </div>
+              <div class="mb-4">
+                  <ul>
+                      <li class="ps-1 py-1">News/Events</li>
+                  </ul>
+              </div>
+          </div>
 
             <!-- Main Section Content -->
             <div class="col-md-8 col-12">
