--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@
                       management
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarManagementDropdown">
-                      <li><a class="dropdown-item" href="#">item one</a></li>
-                      <li><a class="dropdown-item" href="#">item two</a></li>
+                      <li><a class="dropdown-item" href="organogram.html">Organugram</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">what we do</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">legal status</a>
+                    <a class="nav-link" href="legal-status.html">legal status</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="careers.html">career</a>
@@ -123,17 +122,13 @@
             <div class="col-md-2 col-12 home-main-leftbar">
                 <div class="mb-4">
                     <ul>
-                        <li class="ps-1 py-1">Gramaus at a Glance</li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                        <li class="ps-1 py-1">Welcome to PolliProttasha</li>
                     </ul>
                 </div>
 
                 <div class="mb-4">
                     <ul>
-                        <li class="ps-1 py-1">Gramaus at a Glance</li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
-                        <li class="py-1"><a href="">Gramaus at a Glance</a></li>
+                        <li class="ps-1 py-1">News/Events</li>
                     </ul>
                 </div>
             </div>
@@ -188,38 +183,6 @@
                           </div>
                         </div>
                     </div>
-                    <!-- <div class="carousel-item">
-                      <div class="item-header">
-                        <h4 class="text-center py-2">Success Stories</h4>
-                      </div>
-
-                      <div class="item-content p-2">
-                        <div class="row">
-                          <div class="col-6">
-                            <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
-                          </div>
-                          <div class="col-6">
-                            <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
-                          </div>
-                        </div>
-                      </div>
-                    </div> -->
-                    <!-- <div class="carousel-item">
-                      <div class="item-header">
-                        <h4 class="text-center py-2">Success Stories</h4>
-                      </div>
-
-                      <div class="item-content p-2">
-                        <div class="row">
-                            <div class="col-6">
-                              <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="col-6">
-                              <img src="assets/img/home_slider2.jpg" class="img-fluid" alt="">
-                            </div>
-                          </div>
-                      </div>
-                    </div> -->
                   </div>
 
                 </div>
