design update and what we do page add

--- a/donors.html
+++ b/donors.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donors</title>
-
+    <link rel="icon" href="assets/img/favicon.jpg" type="image/jpeg">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
@@ -177,7 +177,7 @@
               <h5 class="mb-4">Contact Information</h5>
               <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
               <p>Phone: +880-1618-7000-30</p>
-              <p>E-mail: polliprottasha21@gmail.com</p>
+              <p>E-mail: info@polliprottasha.org</p>
           </div>
 
           <div class="col-md-3 col-6 morelinks">
