--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
+    <link rel="icon" href="assets/img/favicon.jpg" type="image/jpeg">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
@@ -91,7 +91,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">what we do</a>
+                    <a class="nav-link" href="what-we-do.html">what we do</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="legal-status.html">legal status</a>
@@ -123,12 +123,15 @@
                 <div class="mb-4">
                     <ul>
                         <li class="ps-1 py-1">Welcome to PolliProttasha</li>
+                        <p>Welcome to the Polliprottasha's website, a renown socio-economic organization in Bangladesh. Polliprottasha is a good practiced MFI which has the aims to improve...</p>
+                        <a href="notes.html">Read More <i class="fas fa-arrow-right"></i></a>
                     </ul>
                 </div>
 
                 <div class="mb-4">
                     <ul>
                         <li class="ps-1 py-1">News/Events</li>
+                        <li><a target="_blank" href="https://dailybahadur.com/%e0%a6%97%e0%a7%8c%e0%a6%b0%e0%a7%80%e0%a6%aa%e0%a7%81%e0%a6%b0%e0%a7%87-%e0%a6%aa%e0%a6%b2%e0%a7%8d%e0%a6%b2%e0%a7%80-%e0%a6%aa%e0%a7%8d%e0%a6%b0%e0%a6%a4%e0%a7%8d%e0%a6%af%e0%a6%be%e0%a6%b6%e0%a6%be/">গৌরীপুরে পল্লী প্রত্যাশা</a></li>
                     </ul>
                 </div>
             </div>
@@ -145,15 +148,16 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
-                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
-                      <p>One Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                      <p>Welcome to the Polliprottasha's website, a renown socio-economic organization in Bangladesh. Polliprottasha is a good practiced MFI which has the aims to improve the life quality of the people living at the bottom of the socio-economic pyramid. Polliprottasha focus at awareness-raising and group formation for the aiming at integrated development by establishing rights of the poor Women, Education, Healthcare, Agriculture and credit for income generation activities.</p>
+                      <p>Nearly one thousand people in Gouripur, Mymensingh are getting benefit from the services and activities of Polliprottasha.</p>
+                      <p>We hope this website will be helpful for you to know about Polliprottasha. Thanks and good wishes to all who are interested in microfinance which is effective tools to reduce poverty from the society.</p>
                     </div>
                     <div class="carousel-item">
-                      <p>Two Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                      <p>Polliprottasha is a socio-economic organization which was founded in 2003, at remote. Village Baluapara, Gouripur, Mymensingh. With welfare of the local community. It has a dynamic leadership approach which is key to make it possible to establish organizational sustainability with in the shortest time.</p>
                     </div>
                     <div class="carousel-item">
-                      <p>Three Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi eos veritatis deserunt vel magni veniam a sapiente ipsam, pariatur doloremque illo atque inventore iure ducimus dolor voluptatum saepe et corporis.</p>
+                      <p>Our mission is to support and develop the rural economy by facilitating access to finance and other service for the disadvantaged people.</p>
+                      <p>Building a poverty free Bangladesh through social awareness and income generating activities for the poor people.</p>
                     </div>
                   </div>
                 </div>
@@ -287,7 +291,7 @@
                 <h5 class="mb-4">Contact Information</h5>
                 <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
                 <p>Phone: +880-1618-7000-30</p>
-                <p>E-mail: polliprottasha21@gmail.com</p>
+                <p>E-mail: info@polliprottasha.org</p>
             </div>
 
             <div class="col-md-3 col-6 morelinks">
