--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-
+    <link rel="icon" href="assets/img/favicon.jpg" type="image/jpeg">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
@@ -28,7 +28,7 @@
               <div class="collapse navbar-collapse text-uppercase" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
+                    <a class="nav-link" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarAboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,10 +49,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">what we do</a>
+                    <a class="nav-link" href="what-we-do.html">what we do</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="legal-status.html">legal status</a>
+                    <a class="nav-link" href="legal-status.html">legal status</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="careers.html">career</a>
@@ -157,7 +157,7 @@
               <h5 class="mb-4">Contact Information</h5>
               <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
               <p>Phone: +880-1618-7000-30</p>
-              <p>E-mail: polliprottasha21@gmail.com</p>
+              <p>E-mail: info@polliprottasha.org</p>
           </div>
 
           <div class="col-md-3 col-6 morelinks">
