--- a/career-details.html
+++ b/career-details.html
@@ -49,7 +49,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">what we do</a>
+                  <a class="nav-link" href="what-we-do.html">what we do</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="legal-status.html">legal status</a>
@@ -153,7 +153,7 @@
               <h5 class="mb-4">Contact Information</h5>
               <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
               <p>Phone: +880-1618-7000-30</p>
-              <p>E-mail: polliprottasha21@gmail.com</p>
+              <p>E-mail: info@polliprottasha.org</p>
           </div>
 
           <div class="col-md-3 col-6 morelinks">
