--- a/gallaries.html
+++ b/gallaries.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-
+    <link rel="icon" href="assets/img/favicon.jpg" type="image/jpeg">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!-- Bootstrap CSS -->
@@ -51,7 +51,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">what we do</a>
+                    <a class="nav-link" href="what-we-do.html">what we do</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="legal-status.html">legal status</a>
@@ -189,7 +189,7 @@
               <h5 class="mb-4">Contact Information</h5>
               <p>Ma Babar Dowa Villa<br>Baluapara, Gauripur, Mymensingh</p>
               <p>Phone: +880-1618-7000-30</p>
-              <p>E-mail: polliprottasha21@gmail.com</p>
+              <p>E-mail: info@polliprottasha.org</p>
           </div>
 
           <div class="col-md-3 col-6 morelinks">
