--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                 <div id="carouselExampleIndicatorsTwo" class="home-main-carousel-two carousel slide text-light py-2 mb-3" data-bs-ride="carousel">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <!-- <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
+                    <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <!-- <button type="button" data-bs-target="#carouselExampleIndicatorsTwo" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -179,14 +179,30 @@
                         <div class="item-content p-2">
                           <div class="row">
                             <div class="col-6">
-                              <img src="assets/img/s-01.jpg" class="img-fluid" alt="">
+                              <img src="assets/img/s-02.jpg" class="img-fluid" alt="">
                             </div>
                             <div class="col-6">
-                              <img src="assets/img/s-02.jpg" class="img-fluid" alt="">
+                              <img src="assets/img/20220221_072312_4858_7817.jpg" class="img-fluid" alt="">
                             </div>
                           </div>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                      <div class="item-header">
+                        <h4 class="text-center py-2">Success Stories</h4>
+                      </div>
+
+                      <div class="item-content p-2">
+                        <div class="row">
+                          <div class="col-6">
+                            <img src="assets/img/20220221_082820_HDR_0938.jpg" class="img-fluid" alt="">
+                          </div>
+                          <div class="col-6">
+                            <img src="assets/img/20220221_074825_0622_3656.jpg" class="img-fluid" alt="">
+                          </div>
+                        </div>
+                      </div>
+                  </div>
                   </div>
 
                 </div>
